--- a/cv.html
+++ b/cv.html
@@ -3,25 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Publications - Yuan "Larry" Liu</title>
+  <title>CV - Yuan "Larry" Liu</title>
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
-  <script src="publications.js"></script>
   <script src="footer.js"></script>
   <style>
-    /* Custom styles for the nav bar and layout */
     .nav-bar {
-      background-color: #1e3a8a; /* Dark blue from the screenshot */
+      background-color: #1e3a8a;
     }
     .nav-link {
       color: white;
       transition: color 0.3s;
     }
     .nav-link:hover {
-      color: #93c5fd; /* Lighter blue on hover */
+      color: #93c5fd;
     }
     * {
       font-family: 'Lato', sans-serif;
+    }
+    .pdf-container {
+      height: calc(100vh - 200px);
     }
   </style>
 </head>
@@ -41,35 +42,19 @@
 
   <!-- Main Content -->
   <div class="container mx-auto px-8 py-12">
-    <h2 class="text-2xl font-bold mb-8">Publications</h2>
-
-    <!-- Search and Filter Section -->
-    <div class="flex gap-4 mb-8">
-      <div class="flex-1">
-        <input 
-          type="text" 
-          id="searchInput" 
-          placeholder="Search by title, author, year..." 
-          class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:border-blue-500"
-        >
+    <div class="max-w-4xl mx-auto">
+      <div class="flex justify-between items-center mb-4">
+        <h1 class="text-3xl font-bold text-blue-800">Curriculum Vitae</h1>
+        <a href="files/YuanLiu_CV.pdf" download class="bg-blue-800 text-white px-4 py-2 rounded hover:bg-blue-700 transition-colors">
+          Download PDF
+        </a>
       </div>
-      <div class="w-48">
-        <select 
-          id="yearFilter" 
-          class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:border-blue-500"
-        >
-          <option value="all">All Years</option>
-          <!-- Years will be populated by JavaScript -->
-        </select>
+      
+      <!-- PDF Viewer -->
+      <div class="pdf-container">
+        <iframe src="files/YuanLiu_CV.pdf" class="w-full h-full border border-gray-200 rounded-lg"></iframe>
       </div>
     </div>
-
-    <!-- Publications Section -->
-    <section class="mb-12">
-      <div id="publications-by-year">
-        <!-- Publications will be grouped by year here -->
-      </div>
-    </section>
   </div>
 
   <!-- Copyright Footer -->
@@ -87,14 +72,6 @@
   </button>
 
   <script>
-    // Smooth scrolling for anchor links
-    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-      anchor.addEventListener('click', function(e) {
-        e.preventDefault();
-        document.querySelector(this.getAttribute('href')).scrollIntoView({ behavior: 'smooth' });
-      });
-    });
-
     // Back to Top Button
     const backToTopButton = document.getElementById('back-to-top');
 
