--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
       <a href="#talks" class="nav-link text-base">Talks</a>
       <a href="#teaching" class="nav-link text-base">Teaching</a>
       <a href="#contact" class="nav-link text-base">Contact</a>
+      <a href="cv.html" class="nav-link text-base">CV</a>
     </div>
   </nav>
 
@@ -117,17 +118,13 @@
   <!-- Research Section -->
   <section id="research" class="py-12 bg-gray-100">
     <div class="container mx-auto px-8">
-      <div class="flex flex-col md:flex-row gap-8">
-        <div class="md:w-1/3">
-          <h2 class="text-2xl font-bold mb-2">Recent Papers</h2>
+      <div class="flex flex-col">
+        <div class="flex justify-between items-center mb-8">
+          <h2 class="text-2xl font-bold">Selected Papers</h2>
+          <a href="publications.html" class="text-blue-800 hover:underline">SEE ALL PUBLICATIONS &gt;</a>
         </div>
-        <div class="md:w-2/3 md:-ml-8">
-          <ul id="recent-publications" class="list-disc pl-5">
-            <!-- Publications will be inserted here by JavaScript -->
-          </ul>
-          <div class="mt-6 pl-4">
-            <a href="publications.html" class="text-blue-800 hover:underline">SEE ALL PUBLICATIONS &gt;</a>
-          </div>
+        <div id="selected-publications" class="grid grid-cols-1 gap-8">
+          <!-- Publication cards will be inserted here by JavaScript -->
         </div>
       </div>
     </div>
