--- a/index.html
+++ b/index.html
@@ -83,8 +83,11 @@
     <div class="md:w-2/3 md:pl-8">
       <!-- Home Section -->
       <section id="home" class="mb-12">
-        <p class="text-base text-justify">
-            I am a PhD student at the University of Wisconsin-Madison, advised by <a href="https://her.cee.wisc.edu/group-members/" class="text-blue-800 underline">Dr. Daniel Wright</a>. My research focuses on advancing the understanding and prediction of extreme precipitation and flood hazards under climate change. On the methodology side, I developed advanced statistic methods for precipitation stochastic downscaling and rainfall/flood frequency analysis. On the application side, I investigated mechanisms and risks of extreme precipitation and floods under climate change, with a particular focus on the Mississippi River Basin.  
+        <p class="text-base text-justify"> 
+            I am a postdoctoral researcher at the School of Geography and the Environment, University of Oxford, working with <a href="https://www.geog.ox.ac.uk/staff/lslater.html" class="text-blue-800 underline">Dr. Louise Slater</a>. I obtained my PhD in Civil and Environmental Engineering at the University of Wisconsin-Madison (advisor: <a href="https://her.cee.wisc.edu/group-members/" class="text-blue-800 underline">Dr. Daniel Wright</a>) and was a visiting scientist at Columbia University. 
+        </p>
+        <p class="text-base mt-4 text-justify">
+          My research focuses on advancing the understanding and predictions of extreme precipitation and flood hazards under climate change. On the methodology side, I develop advanced AI and statistical methods for river flow forecasts and rainfall downscaling. On the application side, I investigate mechanisms and risks of extreme rainfall and floods, with a specific focus on the Mississippi River and Mekong River Basins.
         </p>
         <p class="text-base mt-4 text-justify">
             Before coming to UW-Madison, I received a bachelor's degree in Harbor, Waterway, and Coastal Engineering from Dalian University of Technology, advised by <a href="https://scholar-google-com.ezproxy.library.wisc.edu/citations?user=o4AOiqQAAAAJ&hl=en" class="text-blue-800 underline">Dr. Chongwei Zhang</a>.
