--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <div class="md:w-1/3 flex flex-col items-center text-center mb-8 md:mb-0">
       <img src="images/headshot.jpg" alt="Your Name" class="profile-img mb-4">
       <h2 class="text-2xl mb-4">Yuan "Larry" Liu</h2>
-      <p class="text-gray-600 text-lg mb-6">PhD student<br>University of Wisconsin-Madison</p>
+      <p class="text-gray-600 text-lg mb-6">Postdoctoral Researcher<br>University of Oxford</p>
       <div class="flex space-x-2 mt-6 justify-center">
         <a href="mailto:yliu2232@wisc.edu"><img src="images/envelope-solid.svg" alt="Email" class="icon"></a>
         <a href="https://scholar.google.com/citations?hl=en&pli=1&user=aWuu948AAAAJ"><img src="images/google-scholar-brands.svg" alt="Google Scholar" class="icon"></a>
@@ -87,7 +87,7 @@
             I am a postdoctoral researcher at the School of Geography and the Environment, University of Oxford, working with <a href="https://www.geog.ox.ac.uk/staff/lslater.html" class="text-blue-800 underline">Dr. Louise Slater</a>. I obtained my PhD in Civil and Environmental Engineering at the University of Wisconsin-Madison (advisor: <a href="https://her.cee.wisc.edu/group-members/" class="text-blue-800 underline">Dr. Daniel Wright</a>) and was a visiting scientist at Columbia University. 
         </p>
         <p class="text-base mt-4 text-justify">
-          My research focuses on advancing the understanding and predictions of extreme precipitation and flood hazards under climate change. On the methodology side, I develop advanced AI and statistical methods for river flow forecasts and rainfall downscaling. On the application side, I investigate mechanisms and risks of extreme rainfall and floods, with a specific focus on the Mississippi River and Mekong River Basins.
+            My research focuses on advancing the understanding and predictions of extreme precipitation and flood hazards under climate change. On the methodology side, I develop advanced AI and statistical methods for river flow forecasts and rainfall downscaling. On the application side, I investigate mechanisms and risks of extreme rainfall and floods, with a specific focus on the Mississippi River and Mekong River Basins.
         </p>
         <p class="text-base mt-4 text-justify">
             Before coming to UW-Madison, I received a bachelor's degree in Harbor, Waterway, and Coastal Engineering from Dalian University of Technology, advised by <a href="https://scholar-google-com.ezproxy.library.wisc.edu/citations?user=o4AOiqQAAAAJ&hl=en" class="text-blue-800 underline">Dr. Chongwei Zhang</a>.
